NetBSD Problem Report #29914

From smi@sm.sony.co.jp  Thu Apr  7 09:05:31 2005
Return-Path: <smi@sm.sony.co.jp>
Received: from ns4.sony.co.jp (NS4.Sony.CO.JP [137.153.0.44])
	by narn.netbsd.org (Postfix) with ESMTP id B003763B11B
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  7 Apr 2005 09:05:30 +0000 (UTC)
Message-Id: <200504070905.j3795Mu8025570@skysensor.sm.sony.co.jp>
Date: Thu, 7 Apr 2005 18:05:22 +0900 (JST)
From: smi@sm.sony.co.jp
Reply-To: smi@sm.sony.co.jp
To: gnats-bugs@netbsd.org
Subject: pmap_kenter_pa() too many arguments
X-Send-Pr-Version: 3.95

>Number:         29914
>Category:       port-evbppc
>Synopsis:       pmap_kenter_pa() too many arguments
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-evbppc-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Apr 07 09:06:00 +0000 2005
>Closed-Date:    Sat Oct 01 19:16:17 +0000 2005
>Last-Modified:  Sat Oct 01 19:16:17 +0000 2005
>Originator:     Shoichi Miyake
>Release:        NetBSD 3.99.3
>Organization:
Sony Corporation
>Environment:
System: NetBSD skysensor 3.99.3 NetBSD 3.99.3 (GENERIC) #0: Wed Apr 6 21:37:34 JST 2005 smi@skysensor:/work/nb/arch/i386/obj/sys/arch/i386/compile/GENERIC i386
Architecture: powerpc
Machine: evbppc
>Description:
	evbppc build fails on arch/powerpc/ibm4xx/pmap.c.
>How-To-Repeat:
	./build.sh -m evbppc
...
#   compile  EXPLORA451/pmap.o
/work/nb/evbppc/tools/bin/powerpc--netbsd-gcc -mcpu=403 -msoft-float -Wa,-maltiv
ec -ffreestanding -g -O2 -Wreturn-type -Werror -Wall -Wno-main -Wno-format-zero-
length -Wpointer-arith -Wmissing-prototypes -Wstrict-prototypes -Wno-sign-compar
e -fno-zero-initialized-in-bss -D__explora__ -Devbppc=evbppc -I. -I/work/nb/src/
sys/arch -I/work/nb/src/sys -nostdinc -DPPC_INTR_IMPL=<powerpc/ibm4xx/ibm4xx_int
r.h> -DLKM -DDIAGNOSTIC -DDEBUG -DMAXUSERS=32 -D_KERNEL -D_KERNEL_OPT -I/work/nb
/src/sys/dist/ipf -c /work/nb/src/sys/arch/powerpc/ibm4xx/pmap.c
/work/nb/src/sys/arch/powerpc/ibm4xx/pmap.c: In function `pmap_testout':
/work/nb/src/sys/arch/powerpc/ibm4xx/pmap.c:1787: error: too many arguments to f
unction `pmap_kenter_pa'

*** Failed target:  pmap.o

>Fix:
	Is just fixing the typo enough ?
Index: pmap.c
===================================================================
RCS file: /cvsroot/src/sys/arch/powerpc/ibm4xx/pmap.c,v
retrieving revision 1.34
diff -u -c -r1.34 pmap.c
*** pmap.c	1 Apr 2005 11:59:34 -0000	1.34
--- pmap.c	7 Apr 2005 08:29:02 -0000
***************
*** 1784,1790 ****
  	       ref, mod);

  	pmap_remove(pmap_kernel(), va, va + PAGE_SIZE);
! 	pmap_kenter_pa(va, pa, VM_PROT_ALL, VM_PROT_ALL);
  	uvm_km_free(kernel_map, (vaddr_t)va, PAGE_SIZE, UVM_KMF_WIRED);
  }
  #endif
--- 1784,1790 ----
  	       ref, mod);

  	pmap_remove(pmap_kernel(), va, va + PAGE_SIZE);
! 	pmap_kenter_pa(va, pa, VM_PROT_ALL);
  	uvm_km_free(kernel_map, (vaddr_t)va, PAGE_SIZE, UVM_KMF_WIRED);
  }
  #endif

>Release-Note:

>Audit-Trail:
From: YAMAMOTO Takashi <yamt@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: PR/29914 CVS commit: src/sys/arch/powerpc/ibm4xx
Date: Thu,  7 Apr 2005 12:01:08 +0000 (UTC)

 Module Name:	src
 Committed By:	yamt
 Date:		Thu Apr  7 12:01:08 UTC 2005

 Modified Files:
 	src/sys/arch/powerpc/ibm4xx: pmap.c

 Log Message:
 pmap_testout: fix too many arguments for pmap_kenter_pa.
 from Shoichi Miyake.  PR/29914.


 To generate a diff of this commit:
 cvs rdiff -r1.34 -r1.35 src/sys/arch/powerpc/ibm4xx/pmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: scw@netbsd.org
State-Changed-When: Sat, 01 Oct 2005 20:16:17 +0100
State-Changed-Why:
This was fixed in revision 1.35 of src/sys/arch/powerpc/ibm4xx/pmap.c



>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.