pmap_testout: fix too many arguments for pmap_kenter_pa. from Shoichi Miyake.  PR/29914.